Fixing compilation error in AccessibleObjectTestApp -- it is a 1.4 module but had a 1.5 method call in it.