@@ -18,7 +18,7 @@ import java.lang.reflect.AccessibleObject;
 import java.lang.reflect.Method;
 
 public class AccessibleObjectTestApp extends AbstractTransparentApp {
-  private CyclicBarrier barrier;
+  private CyclicBarrier  barrier;
   private final DataRoot root = new DataRoot();
 
   public AccessibleObjectTestApp(String appId, ApplicationConfig cfg, ListenerProvider listenerProvider) {
@@ -50,67 +50,67 @@ public class AccessibleObjectTestApp extends AbstractTransparentApp {
     subclassGetMethodTest3(index);
     subclassGetMethodTest4(index);
   }
-  
+
   private void subclassSetMethodTestStaticArray(int index) throws Exception {
     if (index == 0) {
-      Method m1 = Superclass.class.getDeclaredMethod("setSuperString", new Class[]{String.class});
+      Method m1 = Superclass.class.getDeclaredMethod("setSuperString", new Class[] { String.class });
       root.setM1(m1);
-      Method m2 = Superclass.class.getDeclaredMethod("setL", new Class[]{Long.TYPE});
+      Method m2 = Superclass.class.getDeclaredMethod("setL", new Class[] { Long.TYPE });
       root.setM2(m2);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m1 = root.getM1();
       Assert.assertFalse(m1.isAccessible());
       Method m2 = root.getM2();
       Assert.assertFalse(m2.isAccessible());
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 0) {
-      synchronized(root) {
+      synchronized (root) {
         Method m1 = root.getM1();
         Method m2 = root.getM2();
-        AccessibleObject.setAccessible(new AccessibleObject[]{m1, m2}, true);
+        AccessibleObject.setAccessible(new AccessibleObject[] { m1, m2 }, true);
       }
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m1 = root.getM1();
       Assert.assertTrue(m1.isAccessible());
       Method m2 = root.getM2();
       Assert.assertTrue(m2.isAccessible());
-      
+
       Subclass sub = new Subclass();
-      m1.invoke(sub, new Object[]{"sample super string"});
-      m2.invoke(sub, new Object[]{Long.valueOf(773648L)});
+      m1.invoke(sub, new Object[] { "sample super string" });
+      m2.invoke(sub, new Object[] { new Long(773648L) });
       Assert.assertEquals("sample super string", sub.getSuperString());
       Assert.assertEquals(773648L, sub.getL());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassSetMethodTestUnlocked(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("setSuperString", new Class[]{String.class});
+      Method m = Superclass.class.getDeclaredMethod("setSuperString", new Class[] { String.class });
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Assert.assertFalse(m.isAccessible());
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 0) {
       Method m = root.getM1();
       try {
@@ -120,213 +120,212 @@ public class AccessibleObjectTestApp extends AbstractTransparentApp {
         Assert.assertFalse(m.isAccessible());
       }
     }
-    
+
     barrier.barrier();
   }
- 
+
   private void subclassSetMethodTest4(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("setSuperString", new Class[]{String.class});
+      Method m = Superclass.class.getDeclaredMethod("setSuperString", new Class[] { String.class });
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Assert.assertFalse(m.isAccessible());
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 0) {
-      synchronized(root) {
+      synchronized (root) {
         Method m = root.getM1();
         m.setAccessible(true);
       }
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Assert.assertTrue(m.isAccessible());
       Subclass sub = new Subclass();
-      m.invoke(sub, new Object[]{"sample super string"});
+      m.invoke(sub, new Object[] { "sample super string" });
       Assert.assertEquals("sample super string", sub.getSuperString());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassSetMethodTest3(int index) throws Exception {
     if (index == 0) {
-      Method m = Subclass.class.getMethod("setS", new Class[]{String.class});
+      Method m = Subclass.class.getMethod("setS", new Class[] { String.class });
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Subclass sub = new Subclass();
-      m.invoke(sub, new Object[]{"sample string"});
+      m.invoke(sub, new Object[] { "sample string" });
       Assert.assertEquals("sample string", sub.getS());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassSetMethodTest2(int index) throws Exception {
     if (index == 0) {
-      Method m = Subclass.class.getMethod("setI", new Class[]{Integer.TYPE});
+      Method m = Subclass.class.getMethod("setI", new Class[] { Integer.TYPE });
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Subclass sub = new Subclass();
-      m.invoke(sub, new Object[]{new Integer(10)});
+      m.invoke(sub, new Object[] { new Integer(10) });
       Assert.assertEquals(10, sub.getI());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassSetMethodTest1(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("setI", new Class[]{Integer.TYPE});
+      Method m = Superclass.class.getDeclaredMethod("setI", new Class[] { Integer.TYPE });
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Subclass sub = new Subclass();
-      m.invoke(sub, new Object[]{new Integer(10)});
+      m.invoke(sub, new Object[] { new Integer(10) });
       Assert.assertEquals(10, sub.getI());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassGetMethodTest4(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("getSuperString", new Class[]{});
+      Method m = Superclass.class.getDeclaredMethod("getSuperString", new Class[] {});
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
-      synchronized(root) {
+      synchronized (root) {
         m.setAccessible(true);
       }
       Subclass sub = new Subclass();
       sub.setSuperString("sample super string");
-      String value = (String)m.invoke(sub, new Object[]{});
+      String value = (String) m.invoke(sub, new Object[] {});
       Assert.assertEquals("sample super string", value);
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassGetMethodTest3(int index) throws Exception {
     if (index == 0) {
-      Method m = Subclass.class.getMethod("getS", new Class[]{});
+      Method m = Subclass.class.getMethod("getS", new Class[] {});
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Subclass sub = new Subclass();
       sub.setS("sample string");
-      String value = (String)m.invoke(sub, new Object[]{});
+      String value = (String) m.invoke(sub, new Object[] {});
       Assert.assertEquals("sample string", value);
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassGetMethodTest2(int index) throws Exception {
     if (index == 0) {
-      Method m = Subclass.class.getMethod("getI", new Class[]{});
+      Method m = Subclass.class.getMethod("getI", new Class[] {});
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Subclass sub = new Subclass();
       sub.setI(20);
-      Integer value = (Integer)m.invoke(sub, new Object[]{});
+      Integer value = (Integer) m.invoke(sub, new Object[] {});
       Assert.assertEquals(20, value.intValue());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void subclassGetMethodTest1(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("getI", new Class[]{});
+      Method m = Superclass.class.getDeclaredMethod("getI", new Class[] {});
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Subclass sub = new Subclass();
       sub.setI(20);
-      Integer value = (Integer)m.invoke(sub, new Object[]{});
+      Integer value = (Integer) m.invoke(sub, new Object[] {});
       Assert.assertEquals(20, value.intValue());
     }
-    
+
     barrier.barrier();
   }
-  
+
   private void basicGetMethodTest(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("getI", new Class[]{});
+      Method m = Superclass.class.getDeclaredMethod("getI", new Class[] {});
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Superclass sc = new Superclass();
       sc.setI(20);
-      Integer value = (Integer)m.invoke(sc, new Object[]{});
+      Integer value = (Integer) m.invoke(sc, new Object[] {});
       Assert.assertEquals(20, value.intValue());
     }
-    
+
     barrier.barrier();
   }
 
-  
   private void basicSetMethodTest(int index) throws Exception {
     if (index == 0) {
-      Method m = Superclass.class.getDeclaredMethod("setI", new Class[]{Integer.TYPE});
+      Method m = Superclass.class.getDeclaredMethod("setI", new Class[] { Integer.TYPE });
       root.setM1(m);
     }
-    
+
     barrier.barrier();
-    
+
     if (index == 1) {
       Method m = root.getM1();
       Superclass sc = new Superclass();
-      m.invoke(sc, new Object[]{new Integer(10)});
+      m.invoke(sc, new Object[] { new Integer(10) });
       Assert.assertEquals(10, sc.getI());
     }
-    
+
     barrier.barrier();
   }
 
@@ -339,10 +338,10 @@ public class AccessibleObjectTestApp extends AbstractTransparentApp {
     config.addWriteAutolock(writeAllowedMethodExpression);
     config.addIncludePattern(testClass + "$*");
   }
-  
+
   private static class Superclass {
-    private int i;
-    private long l;
+    private int    i;
+    private long   l;
     private String superString;
 
     public int getI() {
@@ -369,7 +368,7 @@ public class AccessibleObjectTestApp extends AbstractTransparentApp {
       this.l = l;
     }
   }
-  
+
   private static class Subclass extends Superclass {
     private String s;
 
@@ -381,10 +380,10 @@ public class AccessibleObjectTestApp extends AbstractTransparentApp {
       this.s = s;
     }
   }
-  
+
   private static class DataRoot {
-    private Method m1;
-    private Method m2;
+    private Method     m1;
+    private Method     m2;
     private Superclass sharedObject;
 
     public synchronized Method getM1() {
